--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
             <h2 data-aos="fade-up">Mes projets</h2>
             <div class="project-grid">
                 <div class="project" data-aos="fade-up">
-                    <img src="projets/projet1.jpg" alt="Projet 1">
+                    <img src="projet1.jpg" alt="Projet 1">
                     <h3>Site vitrine – Restaurant</h3>
                     <p>HTML • CSS • JavaScript</p>
                     <a href="#">Voir le site</a>
                 </div>
 
                 <div class="project" data-aos="fade-up">
-                    <img src="projets/projet2.jpg" alt="Projet 2">
+                    <img src="projet2.jpg" alt="Projet 2">
                     <h3>E-commerce – Business</h3>
                     <p>HTML • CSS</p>
                 </div>
                 <div class="project" data-aos="fade-up">
-                    <img src="projets/projet3.jpg" alt="Projet 2">
+                    <img src="projet3.jpg" alt="Projet 2">
                     <h3>Carte de fidélité digitale – Business</h3>
                     <p>HTML • CSS • JS</p>
                 </div>
