Refactor header and project section in index.html
Removed an extra line break in the header and a link in the project section.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- HEADER -->
         <header class="hero">
             <h1>Salut, moi c’est <span>Ilyana</span> !</h1>
-            <p class="typing"></p>
+            <p class="typing"></p> <br/>
             <div class="buttons">
             <a href="#projects">Voir mes projets</a>
             <a href="#contact" class="secondary">Me contacter</a>
@@ -55,7 +55,6 @@
                     <img src="projet1.jpg" alt="Projet 1">
                     <h3>Site vitrine – Restaurant</h3>
                     <p>HTML • CSS • JavaScript</p>
-                    <a href="#">Voir le site</a>
                 </div>
 
                 <div class="project" data-aos="fade-up">
