--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             <h1>Salut, moi c’est <span>Ilyana</span> !</h1>
             <p class="typing"></p> <br/>
             <div class="buttons">
-            <a href="#projects">Voir mes projets</a>
-            <a href="#contact" class="secondary">Me contacter</a>
+              <a href="#projects" class="scroll-link">Voir mes projets</a>
+              <a href="#contact" class="scroll-link secondary">Me contacter</a>
             </div>
+
         </header>
 
         <!-- ABOUT -->
